# scriptorium

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: block-feature-to-main.yml  ci.yml  restrict-main-prs.yml  run-tests-on-main.yml  tests.yml
scriptorium/: handlers.py  logger.py
tests/: test_async_logging.py  test_batch_logging.py  test_context_and_errors.py  test_logger.py  test_rotation.py
